picked real changes from broken commit from jonas - customDB Biotransformer Test WIP [skip ci]